add favicon to tab

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,12 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2c3e50",
-  "icons": []
+  "icons": [
+    {
+      "src": "./logo.ico",
+      "sizes": "32x32",
+      "type": "image/x-icon"
+    }
+  ]
 }
 
